samples/_failures_safe/1761090909_b46423_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12f0513c.c: In function ‘main’:
./samples/SAFE/__tmp_12f0513c.c:144:5: error: expected expression at end of input
  144 |     print_hex(output_data,
      |     ^~~~~~~~~
./samples/SAFE/__tmp_12f0513c.c:144:5: error: expected declaration or statement at end of input
